--- a/src/styles/LatestUpdates.css
+++ b/src/styles/LatestUpdates.css
@@ -44,7 +44,7 @@
 
 .updates-container {
     width: 100%;
-    max-width: 700px;
+    max-width: 900px;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -55,7 +55,7 @@
     color: white;
     padding: 16px;
     border: 1px solid #aaaaaa21;
-    border-radius: 8px 8px 0px 0px;
+    border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
@@ -128,6 +128,9 @@
 .match {
     font-size: 16px;
     font-weight: bold;
+    display: flex;
+    align-items: baseline;
+    gap:10px;
 }
 
 .venue {
@@ -151,12 +154,12 @@
 }
 
 .Tba{
-    width: 250px;
+    width: 300px;
     margin-top: 10px;
     text-align: center;
     border-radius: 10px;
     padding: 3px;
-    background-color: red;
+    background-color: #2f2f2f9d;
     color:white;
 }
 
@@ -196,7 +199,7 @@
         font-size: 13px;
     }
     .match{
-        font-size: 12px;
+        font-size: 11px;
     }
     .winner{
         font-size: 12px;
@@ -205,6 +208,9 @@
         font-size: 13px;
     }
     .score{
+        display: flex;
+        text-align: center;
+        width: 54px;
         font-size: 13px;
     }
     .on-going{
@@ -214,10 +220,13 @@
         min-width: 200px;
     }
     .Tba{
-        width: 200px;
+        width: 250px;
     }
     .title{
         margin-top: 20px;
         font-size: 2rem;
+    }
+    .venue{
+        display: none;
     }
 }
