change: campion changed to Campeon

--- a/src/styles/Loader.module.css
+++ b/src/styles/Loader.module.css
@@ -37,7 +37,7 @@
 
 .loaderText::before,
 .loaderText::after {
-  content: "CAMPION";
+  content: "CAMPEON";
   position: absolute;
   top: 0;
   left: 0;
